--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ copyright = "Copyright (c) 2015 dceoy; all rights reserved."
   highlight="Assign a syntax highlight style"
 
 [auther]
-  name = "Near"
+  name = "Nar"
   github = "dceoy"
   twitter = "dceoy"
   gaID = "UA-27914660-4"
