--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
-baseurl = "http://dceoy.github.io/blog/"
+baseurl = "https://dceoy.github.io/blog/"
 title = "Lorem Ipsum"
 canonifyurls = true
 copyright = "Copyright (c) 2015 dceoy; all rights reserved."
