--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ copyright = "Copyright (c) 2015 dceoy; all rights reserved."
   description = "Interdisciplinary Science"
   highlight="atelier-lakeside.light"
 
-[auther]
-  name = "Nar"
+[author]
+  name = "dceoy"
   github = "dceoy"
   twitter = "dceoy"
-  gaID = "UA-27914660-1"
+  gaID = "UA-27914660-5"
