--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,4 @@
-box: debian
+box: ubuntu
 build:
   steps:
     - arjen/hugo-build:
@@ -7,8 +7,11 @@ build:
         flags: --buildDrafts=true
 deploy:
   steps:
-    - install-packages:
-        packages: git ssh-client
+    - script:
+        name: install git ssh-client
+        code: |
+          apt-get -y update
+          apt-get -y install git ssh-client
     - lukevivier/gh-pages:
         token: $GIT_TOKEN
         basedir: public
