--- a/wercker.yml
+++ b/wercker.yml
@@ -4,19 +4,18 @@ box:
 build:
   steps:
     - arjen/hugo-build:
-        version: "0.15"
-        theme: nofancy
-        flags: --buildDrafts=true
+      version: 0.26
+      theme: nofancy
 deploy:
   steps:
     - script:
-        code: |
-          apt-get -y update
-          apt-get -y install git ssh-client
+      code: |
+        apt-get -y update
+        apt-get -y install git ssh-client
     - lukevivier/gh-pages:
-        token: $GIT_TOKEN
-        basedir: public
+      token: $GIT_TOKEN
+      basedir: public
   after-steps:
     - slack-notifier:
-        url: $SLACK_URL
-        channel: $SLACK_CHANNEL
+      url: $SLACK_URL
+      channel: $SLACK_CHANNEL
