--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ publishdir = 'public'
 baseurl = 'https://dceoy.github.io/blog/'
 title = 'Lorem Ipsum'
 canonifyurls = true
-copyright = 'Copyright (c) 2015 dceoy; all rights reserved.'
+copyright = 'Copyright (c) 2015-2018 dceoy; all rights reserved.'
 
 [indexes]
   category = 'categories'
