--- a/wercker.yml
+++ b/wercker.yml
@@ -11,14 +11,14 @@ build:
 deploy:
   steps:
     - lukevivier/gh-pages:
-        token: $GIT_TOKEN
+        token: $GITHUB_TOKEN
         basedir: public
   after-steps:
     - script:
         name: Install curl
         code: |
           apt-get -y update
-          apt-get -y install curl
+          apt-get -y install --no-install-recommends --no-install-suggests curl
     - slack-notifier:
         url: $SLACK_URL
         channel: $SLACK_CHANNEL
