--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ${PWD}:/blog
     working_dir: /blog
     entrypoint:
-      - /go/bin/hugo
+      - /opt/go/bin/hugo
     command:
       - server
       - --bind=0.0.0.0
